Cut very long fields and just add "..." at the end to prevent from overlapping other fields. Show the whole field when the mouse is hovered over the said field.

--- a/aem-webapp/src/main/webapp/resources/css/aem.css
+++ b/aem-webapp/src/main/webapp/resources/css/aem.css
@@ -144,3 +144,13 @@ div .state {
 .vertical-align-top {
     vertical-align: top !important;
 }
+
+.ui-tooltip {
+    text-align:left;
+}
+
+.ui-tooltip * {
+    font-family: "Lucida Console", Monaco, monospace;
+    font-size: 10pt;
+    word-wrap: break-word
+}
